--- a/Frontend/src/styles/Navbar.css
+++ b/Frontend/src/styles/Navbar.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding: 0 2rem;
   height: 70px;
-  background: #fff;
+  background: #0c00f7;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   border-radius: 30px;
 }
