--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -3,10 +3,13 @@
   margin: 0 auto;
   padding: 32px 16px;
   font-family: "Segoe UI", Arial, sans-serif;
+ 
 }
+.animated-banner{
 
+}
 .featured-event {
-  background: #f5f5f5;
+  background: #070505;
   border-radius: 12px;
   padding: 32px 24px;
   margin-bottom: 32px;
@@ -28,6 +31,7 @@
 }
 
 .featured-event-title {
+  color: #fffdfd;
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 12px;
@@ -41,7 +45,7 @@
 
 .featured-event-date {
   font-size: 1rem;
-  color: #888;
+  color: #8d99ae;
   margin-bottom: 8px;
 }
 
@@ -54,7 +58,7 @@
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 16px;
-  color: #222;
+  color: #8d99ae;
 }
 
 .events-list {
@@ -109,7 +113,7 @@
   display: inline-block;
   margin-top: 18px;
   padding: 10px 28px;
-  background: #f7b500;
+  background: #0c00f7;
   color: #222;
   font-weight: 600;
   border: none;
@@ -123,4 +127,14 @@
 .show-all-btn:hover {
   background: #ff9800;
   color: #fff;
+}
+body {
+  margin: 0;
+  font-family: "Segoe UI", Arial, sans-serif;
+
+  background-image: url('https://triptins.com/wp-content/uploads/2023/02/Things-To-Do-in-NYC-at-Night.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* 👈 this keeps it visible while scrolling */
 }
